syntax = "proto3";

option csharp_namespace = "Catalog";

package catalog;

service Grade {
  rpc GetGrade (GradeRequest) returns (GradeReply);
}

message GradeRequest {
  string id = 1;
}

message GradeReply {
  string id = 1;
  string name = 2;
}